tree-sitter-org-inline/test/corpus/scanner_boundary_validation.txt
==================
Invalid: Leading whitespace in bold
==================

This is * bold* text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Trailing whitespace in bold
==================

This is *bold * text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Both leading and trailing whitespace in bold
==================

This is * bold * text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Multiple spaces leading in bold
==================

This is *  bold* text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Multiple spaces trailing in bold
==================

This is *bold  * text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Tab leading in bold
==================

This is *	bold* text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Tab trailing in bold
==================

This is *bold	* text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Leading whitespace in italic
==================

This is / italic/ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Trailing whitespace in italic
==================

This is /italic / text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Both leading and trailing whitespace in italic
==================

This is / italic / text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Leading whitespace in underline
==================

This is _ underline_ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Trailing whitespace in underline
==================

This is _underline _ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Both leading and trailing whitespace in underline
==================

This is _ underline _ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Leading whitespace in code
==================

This is ~ code~ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Trailing whitespace in code
==================

This is ~code ~ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Both leading and trailing whitespace in code
==================

This is ~ code ~ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Leading whitespace in verbatim
==================

This is = verbatim= text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Trailing whitespace in verbatim
==================

This is =verbatim = text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Both leading and trailing whitespace in verbatim
==================

This is = verbatim = text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Leading whitespace in strike
==================

This is + strike+ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Trailing whitespace in strike
==================

This is +strike + text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Both leading and trailing whitespace in strike
==================

This is + strike + text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Valid: Internal whitespace in bold (allowed)
==================

This is *bold text* here.

---

(inline
  (title_only
    (title
      (plain_text)
      (bold
        (plain_text))
      (plain_text))))

==================
Valid: Internal whitespace in italic (allowed)
==================

This is /italic text/ here.

---

(inline
  (title_only
    (title
      (plain_text)
      (italic
        (plain_text))
      (plain_text))))

==================
Valid: Internal whitespace in underline (allowed)
==================

This is _underline text_ here.

---

(inline
  (title_only
    (title
      (plain_text)
      (underline
        (plain_text))
      (plain_text))))

==================
Valid: Internal whitespace in code (allowed)
==================

This is ~code text~ here.

---

(inline
  (title_only
    (title
      (plain_text)
      (code)
      (plain_text))))

==================
Valid: Internal whitespace in verbatim (allowed)
==================

This is =verbatim text= here.

---

(inline
  (title_only
    (title
      (plain_text)
      (verbatim)
      (plain_text))))

==================
Valid: Internal whitespace in strike (allowed)
==================

This is +strike text+ here.

---

(inline
  (title_only
    (title
      (plain_text)
      (strike_through
        (plain_text))
      (plain_text))))

==================
Valid: Multiple words with spaces in bold
==================

This is *bold text with multiple words* here.

---

(inline
  (title_only
    (title
      (plain_text)
      (bold
        (plain_text))
      (plain_text))))

==================
Valid: Multiple words with spaces in italic
==================

This is /italic text with multiple words/ here.

---

(inline
  (title_only
    (title
      (plain_text)
      (italic
        (plain_text))
      (plain_text))))

==================
Invalid: Only whitespace in bold
==================

This is * * text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Only whitespace in italic
==================

This is / / text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Only tab in code
==================

This is ~	~ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Empty contents in bold
==================

This is ** text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Empty contents in italic
==================

This is // text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Invalid: Empty contents in code
==================

This is ~~ text.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Valid: Single non-whitespace character in bold
==================

This is *x* text.

---

(inline
  (title_only
    (title
      (plain_text)
      (bold
        (plain_text))
      (plain_text))))

==================
Valid: Punctuation only in code
==================

This is ~!@#$%^~ text.

---

(inline
  (title_only
    (title
      (plain_text)
      (code)
      (plain_text))))

==================
Invalid: Newline in bold (line-scoped rule)
==================

This is *bold
text* here.

---

(inline
  (title_only
    (title
      (plain_text)
      (bold
        (plain_text))
      (plain_text))))

==================
Invalid: Newline in italic (line-scoped rule)
==================

This is /italic
text/ here.

---

(inline
  (title_only
    (title
      (plain_text)
      (italic
        (plain_text))
      (plain_text))))

==================
Invalid: Newline in code (line-scoped rule)
==================

This is ~code
text~ here.

---

(inline
  (title_only
    (title
      (plain_text))))

==================
Valid: Bold with hyphen-separated words
==================

This is *foo-bar-baz* text.

---

(inline
  (title_only
    (title
      (plain_text)
      (bold
        (plain_text))
      (plain_text))))

==================
Valid: Code with spaces and punctuation
==================

This is ~int *ptr = NULL;~ text.

---

(inline
  (title_only
    (title
      (plain_text)
      (code)
      (plain_text))))

==================
Valid: Verbatim with markup characters
==================

This is =*bold* /italic/= text.

---

(inline
  (title_only
    (title
      (plain_text)
      (verbatim)
      (plain_text))))
